--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#write to csv file function\n",
+    "def write_page_to_file(page_tags):\n",
+    "    file = open('data.csv','a+',newline='')\n",
+    "    with file:\n",
+    "        write = csv.writer(file,delimiter=',')\n",
+    "        write.writerows(page_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#find stack traces function\n",
+    "def find_stack_trace(url, tags):\n",
+    "    response_bug = requests.get(next_url)\n",
+    "    html_content_bug = response_bug.content\n",
+    "    dom_bug = BeautifulSoup(html_content_bug,'html.parser')\n",
+    "    temp = dom_bug.find('pre')\n",
+    "    if(temp != [] and temp !=None):\n",
+    "        if(temp.find('code')!=None):\n",
+    "            tags.append(str(temp.find('code')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,32 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#write to csv file function\n",
-    "def write_page_to_file(page_tags):\n",
-    "    file = open('data.csv','a+',newline='')\n",
-    "    with file:\n",
-    "        write = csv.writer(file)\n",
-    "        write.writerows(page_tags)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#find stack traces function\n",
-    "def find_stack_trace(issue_page):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +91,19 @@
     "        for each in all:\n",
     "            #store tags for every issue\n",
     "            tags=[]\n",
+    "            is_Bug = False\n",
+    "            \n",
     "            for counter,temp in enumerate(each.find_all('a')):\n",
     "                tag = str(temp.string)\n",
+    "                if tag == \"Bug\":\n",
+    "                    is_Bug = True\n",
     "                tags.append(tag)\n",
+    "            \n",
+    "            #if it is a Bug check for stack trace\n",
+    "            if(is_Bug == True):\n",
+    "                next_url = base_url + each.find('a')['href']\n",
+    "                find_stack_trace(next_url,tags)\n",
+    "            \n",
     "            \n",
     "            #store all issue's tags in a global struct \n",
     "            page_tags.append(tags)\n",
@@ -97,7 +113,6 @@
     "    \n",
     "    #visit next page if exists\n",
     "    end = dom.findAll('a',class_='next_page')\n",
-    "    break\n",
     "    if end==[]:\n",
     "        break\n",
     "    next_url = base_url + end[1]['href']\n",
