--- a/Scraping_v1.2.ipynb
+++ b/Scraping_v1.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_json(page_objects):\n",
-    "    with open('data.json','a') as f:\n",
+    "    with open('data1.json','a') as f:\n",
     "        json.dump(page_objects,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#maybe embody it in the find desc function to reduce iterations.\n",
+    "def remove_special_ch(text):\n",
+    "    \n",
+    "    for i in range(0,len(text)):\n",
+    "        text[i] = text[i].replace('\\n','')\n",
+    "        text[i] = text[i].replace('\\t','')\n",
+    "        text[i] = re.sub(r\"<.*?>\",\"\",text[i])\n",
+    "        #maybe better solution is <[^<>]+> matches any character except < or > \n",
+    "        #one or more times included inside < and > "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,19 +80,25 @@
     "    calculate_desc(temp_2,description,stack_trace)\n",
     "    \n",
     "    #find the person who closed the issue\n",
-    "    temp_3       = dom.find_all('div',class_='TimelineItem-body') \n",
+    "    who_closed_it = \"none\"\n",
+    "    temp_3        = dom.find_all('div',class_='TimelineItem-body') \n",
     "    for i in temp_3:\n",
     "        if i.text.find('closed this')!=-1:\n",
     "            if i.find('a',class_='author Link--primary text-bold') is None:\n",
     "                continue\n",
     "            who_closed_it = i.find('a',class_='author Link--primary text-bold').text\n",
     "    \n",
+    "    #remove special characters from the description and stack trace\n",
+    "    remove_special_ch(description)\n",
+    "    if stack_trace != []:\n",
+    "        remove_special_ch(stack_trace)\n",
+    "    \n",
     "    return who_closed_it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +121,7 @@
     "            if type(html_content[i]) is bs4.element.NavigableString:\n",
     "                #avoid writting empty lines and html tags <br>\n",
     "                if len(html_content[i])>4:\n",
-    "                    description.append(html_content[i])\n",
+    "                    description.append(str(html_content[i]))\n",
     "            elif type(html_content[i] is bs4.element.Tag):\n",
     "                #call recursively the function till length is 1\n",
     "                calculate_desc(html_content[i],description,stack_trace)\n",
@@ -107,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,12 +138,14 @@
     "\n",
     "#define some variables\n",
     "total_issues  = 0\n",
-    "total_traces = 0\n",
+    "total_traces  = 0\n",
+    "issues        = []\n",
+    "\n",
     "\n",
     "#initialize important url's\n",
     "base_url = \"https://github.com/\"\n",
-    "#query_url = f\"https://github.com/cgeo/cgeo/issues?page=1&q=is%3Aissue+is%3Aclosed\"\n",
-    "query_url = f\"https://github.com/cgeo/cgeo/issues?page=6&q=is%3Aissue+is%3Aclosed\"\n",
+    "query_url = f\"https://github.com/cgeo/cgeo/issues?page=1&q=is%3Aissue+is%3Aclosed\"\n",
+    "#query_url = f\"https://github.com/cgeo/cgeo/issues?page=115&q=is%3Aissue+is%3Aclosed\"\n",
     "\n",
     "#authorization in order to make more requests.\n",
     "token = os.getenv(\"GITHUB_TOKEN\")\n",
@@ -131,9 +156,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Default folder for themes should be below maps folder\n",
+      "2 Problem posting log\n",
+      "3 Active circles not shown on change of map type\n",
+      "4 Circle color setup effective only after restart (OSM)\n",
+      "5 Failure in LogTemplateProviderTest.testNoNumberIncrement\n",
+      "6 c:geo not starting after restore of data\n",
+      "7 Crash after renaming theme file\n",
+      "8 Stuck on cache refresh/delete\n",
+      "9 Include debug logging into SAF procedures\n",
+      "10 Perform theme folder sync as background task\n",
+      "11 Hide unittest folder selection in Settings - System\n",
+      "12 Theme options not working for zipped themes\n",
+      "13 Downloaded theme not set as current theme\n",
+      "14 Unresponsive/Slow app when buffering themes on SD\n",
+      "15 Check on existing final coords before navigation is started\n",
+      "16 [Nightly] Syc'ing themes folder to internal storage does not work\n",
+      "17 Meaning of string folder_process_status_currentfile\n",
+      "18 SAF: Picture attached via Google Fotos gets attached twice\n",
+      "19 replace com.yqritc.recyclerviewflexibledivider\n",
+      "20 SAF: Behavior of migration wizard if folder selection is aborted\n",
+      "21 custom cache icon can only be changed for a whole list\n",
+      "22 Crash when trying to attach image\n",
+      "23 [Nightly] Save / Refresh Mystery does not work - sometimes\n",
+      "24 Question: Offline Log Deletion on Cache Deletion ok?\n",
+      "25 Offline find counter [NUMBER] is inaccurate and getting worse\n"
+     ]
+    }
+   ],
    "source": [
     "#loop through all pages\n",
     "\n",
@@ -167,6 +224,12 @@
     "            if stack_trace !=[]:\n",
     "                total_traces = total_traces +1\n",
     "            \n",
+    "            print(total_issues,tags[0])\n",
+    "            #print(\"********************\")\n",
+    "            #print(description)\n",
+    "            #print(\"********************\")\n",
+    "            #print(stack_trace)\n",
+    "            \n",
     "            #write dictionary\n",
     "            if len(tags)>=1:    \n",
     "                issue_object = {'name':tags[0],'tags':tags[1:len(tags)-1],'opened_by':tags[len(tags)-1],\n",
@@ -174,8 +237,13 @@
     "           \n",
     "            page_objects.append(issue_object)\n",
     "            \n",
-    "        #write issues to json file\n",
-    "        write_json(page_objects)\n",
+    "        #combine all issues to a global list\n",
+    "        issues.extend(page_objects)\n",
+    "        \n",
+    "        #debug \n",
+    "        if total_issues >=25:\n",
+    "            break\n",
+    "        ####\n",
     "        \n",
     "        #visit the next page if exists\n",
     "        end = dom.findAll('a',class_='next_page')\n",
@@ -184,9 +252,48 @@
     "            break\n",
     "        next_url = base_url+end[1]['href']\n",
     "        response = requests.get(next_url)\n",
+    "        \n",
     "        # Sleep for 60 seconds\n",
     "        time.sleep(60)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "#store all issues\n",
+    "write_json(issues)\n",
+    "\n",
+    "#print some statistics\n",
+    "print(total_traces)\n",
+    "print(total_issues)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5888\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -194,19 +301,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# more generic how to find the stack trace\n",
-    "# export in json\n",
-    "# for every issue take also and the description\n",
-    "# take who closed the issue.===>This person possibly solve it to\n",
-    "########################################################################\n",
-    "# find total number of stack traces, find the total files\n",
-    "# ftiaksw parametrika diavazontas tis teleies.\n",
-    "# find for each file in how many stack traces appears.\n",
-    "#-----------------------------------------------------------------------\n",
-    "# predict tags in open issues\n",
-    "# from stack traces take the file which the bug occured\n",
-    "# make knowledge graph.?!later."
+    "#add in scraping extra for finding stack traces in issues    \n",
+    "#remove \\n \\t with regular expression etc.                   done\n",
+    "\n",
+    "#this is last\n",
+    "#tokenization the text.\n",
+    "#and then create embeddings.\n",
+    "\n",
+    "#not this onestack traces to graph -> (networkx)\n",
+    "#this one for sure !!!stack traces to dictionary             \n",
+    "\n",
+    "#saturday must have finish them"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
